# UniFox-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  imgui.ini
Examples/Chess/: CMakeLists.txt
Examples/Chess/assets/shaders/: shader.glsl
Examples/Chess/src/: Action.cpp  Action.h  Board.cpp  Board.h  Chess.cpp  Moves.cpp  Piece.cpp  Piece.h  Team.h  main.cpp
Examples/Tests/: CMakeLists.txt
Examples/Tests/src/: Sandbox2D.h  Sandbox3D.h
Examples/Voxels/: CMakeLists.txt
Examples/Voxels/assets/shaders/: quad.glsl  terrain.glsl
Examples/Voxels/src/: Chunk.h  Terrain.cpp  Terrain.h  main.cpp
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: FlatColor.glsl  Shader2D.glsl  Texture.glsl  particle.glsl  quad.glsl  shader.glsl  terrain.glsl
Sandbox/src/: Chunk.h  Particle.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h  Terrain.cpp  Terrain.h
Sandbox/src/Chess/: Board.cpp  Board.h  Chess.cpp  Chess.h  Piece.cpp  Piece.h  Team.h
UniFox/: CMakeLists.txt
UniFox/src/: UniFox.h  ufpch.cpp  ufpch.h
UniFox/src/UniFox/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
UniFox/src/UniFox/Core/: Application.cpp  Application.h  Buffer.h  Core.h  EntryPoint.h  FileStream.cpp  FileStream.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MemoryStream.cpp  MemoryStream.h  MouseButtonCodes.h  OrthographicCameraController.cpp  PlatformDetection.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h  Time.cpp  Time.h  Timer.h  Window.h
UniFox/src/UniFox/Debug/: Instrumentor.h
UniFox/src/UniFox/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
UniFox/src/UniFox/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
UniFox/src/UniFox/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
UniFox/src/UniFox/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
UniFox/src/UniFox/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
UniFox/src/UniFox/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
UniFox/src/UniFox/Util/: FileStream.cpp  MemoryStream.cpp  MemoryStream.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h  Timing.h
